traefik_dashboard_ingress_rules.yml
# Access using http://traefik-dashboard.com/dashboard/#/

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-web-ui
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: traefik-dashboard.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: traefik-web-ui
            port:
              number: 80
